--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
     name: myselectshop
 
   datasource:
-    url: jdbc:mysql://localhost:3306/shop
+    url: jdbc:mysql://${SERVER_IP}:3306/shop
     username: root
     password: ${DB_PW}
     driver-class-name: com.mysql.cj.jdbc.Driver
