--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ spring:
 
   datasource:
     url: jdbc:mysql://${SERVER_IP}:3306/shop
-    username: root
+    username: ${DB_USER}
     password: ${DB_PW}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
