fix: resolve bug in Kakao social login redirect URL

--- a/src/main/resources/key.yaml
+++ b/src/main/resources/key.yaml
@@ -5,7 +5,5 @@ naver:
 admin:
     token: ${ADMIN_TOKEN}
 
-rest:
-  api:
-    key:
-      kakao: ${KAKAO_REST_API_KEY}
+kakao:
+  api-key: ${KAKAO_REST_API_KEY}
